--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1677,6 +1677,18 @@ msgstr "Our Works"
 msgid "Services"
 msgstr "Сервисы"
 
+msgid "Номер аукциона:"
+msgstr "Auction number:"
+
+msgid "Дата:"
+msgstr "Date:"
+
+msgid "Адрес проведения:"
+msgstr "Address:"
+
+msgid "Количество лотов:"
+msgstr "Number of lots:"
+
 #~ msgid "Просмотры"
 #~ msgstr "Views"
 
