added MDB5 and added functionality for publishing house

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1704,6 +1704,9 @@ msgstr "Sale price:"
 msgid "Количество лотов:"
 msgstr "Number of lots:"
 
+msgid "Издательский дом"
+msgstr "Publishing house"
+
 #~ msgid "Просмотры"
 #~ msgstr "Views"
 
